second commit day2

--- a/styles/main.css
+++ b/styles/main.css
@@ -1,9 +1,12 @@
 /* BASICS */
 @import 'basics/base.css';
+@import 'basics/helpers.css';
+@import 'components/layout.css';
 
 /* COMPONENTS */
 @import 'components/header.css';
 @import 'components/canvas.css';
+@import 'components/gallery.css';
 @import 'components/images.css';
 
 /* MEDIA QUERIS */
