--- a/styles/components/header.css
+++ b/styles/components/header.css
@@ -1,23 +1,28 @@
 .main-header {
-    background-color: rgb(230, 242, 228);
+    background-color: #77bfa3;
+    margin-bottom: 20px;
 }
 
 .main-header {
-    height: 130px;
     display: grid;
     grid-template-columns:
     minmax(1.25rem, 1fr) minmax(auto, 1020px) minmax(1.25rem, 1fr);
 }
 
-.main-header .main-menu > * {
-    margin-inline-end: 100px;
-}
-
 .main-header .main-menu a{
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-size: 1.5rem;
     text-decoration: none;
     text-transform: uppercase;
+    color: #00798c;
 }
 
-.main-nav{
-    grid-column: 2;
-}  
+.logo {
+    font-size: 2rem;
+    font-family: gajraj;
+    color: #00798c;
+}
+
+.main-header .main-menu > * a:hover{
+    color: #21626c;
+}
