--- a/styles/components/images.css
+++ b/styles/components/images.css
@@ -1,4 +1,6 @@
 img {
-  height: 150px;
-  width: 150px;
+  height: 220px;
+  width: 220px;
+  border-radius: 20px;
+  border: 2px solid #3b6064b2;
 }
