--- a/styles/main.css
+++ b/styles/main.css
@@ -1,3 +1,6 @@
+/* SETUP */
+@import "setup/typography.css";
+
 /* BASICS */
 @import 'basics/base.css';
 @import 'basics/helpers.css';
@@ -11,3 +14,7 @@
 
 /* MEDIA QUERIS */
 @import 'setup/mq.css';
+
+.hide {
+    display: none;
+}
