--- a/styles/setup/mq.css
+++ b/styles/setup/mq.css
@@ -1,42 +1,72 @@
 /* MOBILE */
-@media (max-width: 740px) {}
+@media (max-width: 880px) {
+    .logo {
+        margin-top: 10px;
+        margin-left: 20px;
+    }
+
+    .main-nav .main-menu a{
+        margin-left: 20px;
+        margin-bottom: 10px;
+        display: flex;
+        align-items: end;
+    }
+
+    .gallery-container {
+        grid-template-columns: 1fr 1fr;
+        column-gap: 5px;
+        position: relative;
+    }
+}
 
 /* TABLET */
 /* 880px */
 
 @media (min-width: 880px) {
-    .main-layout {
-        display: grid;
-        grid-template-columns:
-          minmax(20px, 1fr)
-          minmax(auto, 600px)
-          minmax(20px, 1fr);
-      }
-      .main-layout > *:not(.full) {
-        grid-column: 2;
-      }
-      .main-layout > .full {
-        grid-column: 1 / -1;
-      }
-
     .main-header {
-        height: 130px;
         display: grid;
         grid-template-columns:
-        minmax(1.25rem, 1fr) minmax(auto, 1020px) minmax(1.25rem, 1fr);
+            minmax(1.25rem, 1fr) minmax(auto, 1020px) minmax(1.25rem, 1fr);
     }
-    
-    .main-header .main-menu > * {
+
+    .main-header .main-menu>* {
         margin-inline-end: 100px;
     }
-    
-    .main-header .main-menu a{
+
+    .main-header .main-menu a {
         text-decoration: none;
         text-transform: uppercase;
     }
-    
-    .main-nav{
+
+    .main-nav {
         grid-column: 2;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+
+    .main-nav {
+        grid-column: 2;
+    }
+
+    .gallery-container {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+
+        row-gap: 20px;
+        column-gap: 5px;
+        position: relative;
+    }
+
+    .canvas-container {
+        margin-top: 200px;
+        display: flex;
+        justify-content: space-evenly;
+        gap: 30px;
+    }
+
+    .editor-container {
+        margin-top: 60px;
     }
 }
 
@@ -48,4 +78,9 @@
             minmax(20px, 1fr) minmax(auto, 1060px) minmax(20px, 1fr);
     }
 
+    .canvas-container {
+        display: flex;
+        justify-content: space-between;
+        gap: 30px;
+    }
 }
