finaly with font

--- a/styles/setup/typography.css
+++ b/styles/setup/typography.css
@@ -1,5 +1,5 @@
 /* gajraj */
 @font-face {
     font-family: gajraj;
-    src: url(/fonts/gajraj/GajrajOne-Regular.ttf);
+    src: url(../../fonts/gajraj/GajrajOne-Regular.ttf);
   }
