--- a/styles/components/gallery.css
+++ b/styles/components/gallery.css
@@ -1,7 +1,21 @@
-
 .gallery-container {
     grid-template-columns: 1fr 1fr;
-    column-gap: 5px;
+    column-gap: 10px;
+    row-gap: 10px;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(90px, 150px));
+    width: 100%;
+    justify-content: center;
 }
 
+img {
+    width: 100%;
+    height: 100%;
+}
 
+.main-container {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
